@@ -187,14 +187,22 @@
 
 
     <h1>Assert-AdminPrivileges</h1>
-    <div>Checks that you're running as an administrator, and throws an error if you aren't.</div>
+    <div>Throws an exception if the user doesn't have administrator privileges.</div>
 
         <h2>Syntax</h2>
     <pre class="Syntax"><code>Assert-AdminPrivileges [&lt;CommonParameters&gt;]</code></pre>
     
+        <h2>Description</h2>
+    <div class="Description">
+        <p>Many scripts and functions require the user to be running as an administrator.  This function checks if the user is running as an administrator or with administrator privileges and <strong>throws an exception</strong> if the user doesn't.</p>
+
+    </div>
     
-    
-    
+            <h2>Related Commands</h2>
+        <ul>
+<li><a href="Test-AdminPrivileges.html">Test-AdminPrivileges</a></li>
+</ul>
+
 
     
         
@@ -204,6 +212,9 @@
         
     
         
-    
+                <h2>EXAMPLE 1</h2>
+            <pre><code>Assert-AdminPrivileges</code></pre>
+            <p><p>Throws an exception if the user doesn't have administrator privileges.</p>
+</p><p></p><p></p><p></p><p></p>
 </body>
 </html>   
